--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "eslint-config-next": "13.2.1",
     "firebase": "^10.1.0",
     "framer-motion": "^10.0.0",
-    "next": "13.2.1",
+    "next": "^14.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
