--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.20.4",
     "@firebase/firestore": "^3.8.3",
+    "@kinde-oss/kinde-auth-nextjs": "^2.2.3",
     "@next/font": "13.2.1",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
