--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@firebase/firestore": "^3.8.3",
     "@kinde-oss/kinde-auth-nextjs": "^2.2.3",
     "@next/font": "13.2.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "firebase": "^10.1.0",
@@ -25,6 +28,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.10.1",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "4.9.5"
   },
   "devDependencies": {
