--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@next/font": "13.2.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@types/node": "18.14.2",
-    "@types/react": "18.0.28",
+    "@types/react": "^18.2.79",
     "@types/react-dom": "18.0.11",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -23,14 +23,14 @@
     "eslint-config-next": "13.2.1",
     "firebase": "^10.1.0",
     "framer-motion": "^10.0.0",
-    "next": "^14.2.0",
-    "react": "18.2.0",
+    "next": "^14.2.1",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.10.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "4.9.5"
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
