--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@anthropic-ai/sdk": "^0.20.4",
     "@firebase/firestore": "^3.8.3",
     "@kinde-oss/kinde-auth-nextjs": "^2.2.3",
+    "@neondatabase/serverless": "^0.9.1",
     "@next/font": "13.2.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@types/node": "18.14.2",
@@ -19,11 +20,13 @@
     "@types/react-dom": "18.0.11",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "drizzle-orm": "^0.30.8",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "firebase": "^10.1.0",
     "framer-motion": "^10.0.0",
     "next": "^14.2.1",
+    "pg": "^8.11.5",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
@@ -34,6 +37,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "drizzle-kit": "^0.20.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
